# Deep-Learning-Class

./: .gitignore  README.md  pyproject.toml
Homework1/: API_Helpers.py  CIFAR10.py  Housing.py  __init__.py
Homework1/Saved_Models/: 100_Epoch_CIFAR.pt  20_Epoch_CIFAR.pt  Housing.pt  Housing_OnHot.pt
Homework2/: AlexNet.py  ResNet.py  VGGNet.py  __init__.py
Homework3/: Problem1.py  Problem2.py  __init__.py
Homework4/: English2French.py  English2French_attention.py  French2English.py  French2English_attention.py  __init__.py
Homework5/: English2French.py  French2English.py  Problem1.py  Problem2.py  __init__.py  dataset.json  problem1CharSet.txt
Homework6/: ResNet.py  Swin_Pretrained.py  Swin_Scratch.py  ViT.py  __init__.py
project/: API_Helpers.py  __main__.py
testing/: __init__.py  __main__.py  micrograd.ipynb
